# GVR

./: .rar  CMakeLists.txt  CMakeSettings.json  README.md  dnn_face_recognition_ex.cpp  validator.cpp  web_cam_validator.cpp
